crates/tui/tests/snapshots/detail__alert.snap
---
source: crates/tui/tests/detail.rs
expression: "app.snapshot(120, 36).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────────────────────────╮
│Context:    -                                                    ⏎ drill        y detail    │       clusters 3  hosts 7
│PC:         127.0.0.1:PORT  pc.7.6                              S sort         w wide      │     vms 100  on/off 100/0
│Cluster:    <all>                                               ←→ columns     ^r refresh   │       alerts ⚠ 100  ✖ 100
│Kind:       Monitoring › Alerts                                 ^t every       ^x stop      │       tasks ▶ 100 running
│Count:      100                                                  a actions     ^c quit      │
╰────────────────────────────────────────────────────────────────────────────────────────────╯           v0.2.0 · pc.7.6
╭ nutsh ───────────────╮┌Alerts · Disk space usage high for /home on stringValue-fd6736b6 203.0.113.1──────────────────┐
│  ▸ Dashboard         ││WHAT HAPPENED ────────────────────────────────────────────────────────────────────────────────│
│  ▸ Compute & Storage ││             Title Disk space usage high for /home on stringValue-fd6736b6 203.0.113.1        │
│  ▸ Network & Security││           Message Disk space usage for {mount_path} on {entity} {ip_address} has exceeded {th│
│  ▸ Data Protection   ││          Severity WARNING                                Status OPEN                         │
│  ▸ Hardware          ││              Code A1031                                 Service -                            │
│  ▾ Monitoring        ││CAUSE ────────────────────────────────────────────────────────────────────────────────────────│
│      Overview        ││             Cause -                                  Resolution -                            │
│    • Alerts [100]    ││                KB http://portal.nutanix.com/kb/1523                                          │
│      Events          ││WHERE ────────────────────────────────────────────────────────────────────────────────────────│
│      Tasks           ││           Cluster clusterName-277ed708             Cluster UUID name-277ed708                │
│      Audits          ││            Source name-32bb2481                     Source type Node                         │
│      Alert Policies  ││          Affected name-32bb2481                           Nodes hostName-32bb2481            │
│      Reports         ││TIMING ───────────────────────────────────────────────────────────────────────────────────────│
│  ▸ Policies          ││        First seen 0s                                  Last seen 0s                           │
│  ▸ Admin Center      ││           Updated 0s                               Acknowledged -                            │
│  ▸ Files             ││          Resolved -                                                                          │
│  ▸ Objects           ││HANDLING ─────────────────────────────────────────────────────────────────────────────────────│
│  ▸ Contexts          ││      Acknowledged ✗                                    Resolved ✗                            │
│  ▸ Settings          ││     Auto-resolved ✗                                    Runnable ✓                            │
│  ─── by namespace ───││CLASSIFICATION ───────────────────────────────────────────────────────────────────────────────│
│  ▸ aiops             ││            Impact System indicator                      Impacts System indicator             │
│  ▸ clustermgmt       ││           Classes Storage                                                                    │
│  ▸ dataprotection    ││PARAMETERS ───────────────────────────────────────────────────────────────────────────────────│
│  ▸ iam               ││              Name paramName-f9ac79b6 +12                  Value stringValue-1f99c2f8 +8      │
│  ▸ licensing         ││ACTIONS ──────────────────────────────────────────────────────────────────────────────────────│
╰───────────────── ↓12 ╯└──────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k:scroll  g/G:top/bottom  a:actions  w:watch  Y:yaml  J:json  esc:back
[meter]          ● live
