crates/tui/tests/snapshots/detail__cluster.snap
---
source: crates/tui/tests/detail.rs
expression: "app.snapshot(120, 36).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────────────────────────╮
│Context:    -                                                    ⏎ drill        y detail    │       clusters 3  hosts 7
│PC:         127.0.0.1:PORT  pc.7.6                              S sort         w wide      │     vms 100  on/off 100/0
│Cluster:    <all>                                               ←→ columns     ^r refresh   │       alerts ⚠ 100  ✖ 100
│Kind:       Hardware › Clusters                                 ^t every       ^x stop      │       tasks ▶ 100 running
│Count:      3                                                    a actions     ^c quit      │
╰────────────────────────────────────────────────────────────────────────────────────────────╯     v0.0.2-beta2 · pc.7.6
╭ nutsh ───────────────╮┌Clusters · name-d2b6bd1b──────────────────────────────────────────────────────────────────────┐
│  ▸ Dashboard         ││IDENTITY ─────────────────────────────────────────────────────────────────────────────────────│
│  ▸ Compute & Storage ││              Name name-d2b6bd1b                                                              │
│  ▸ Network & Security││              UUID 0006237e-c983-e712-0000-00000001c1d0                                       │
│  ▸ Data Protection   ││          Function Aos                                      Type Hyper converged              │
│  ▾ Hardware          ││      Architecture X86 64                                                                     │
│      Overview        ││STATE ────────────────────────────────────────────────────────────────────────────────────────│
│    • Clusters [3]    ││              Mode NORMAL                              Available ✓                            │
│      Hosts           ││           Upgrade SUCCEEDED                                 LTS ✗                            │
│      Disks           ││NODES ────────────────────────────────────────────────────────────────────────────────────────│
│      Host NICs       ││             Nodes 3                                         VMs 34                           │
│      NIC Profiles    ││          Host IPs 198.51.100.164 +2                     CVM IPs 203.0.113.17 +2              │
│      Physical GPUs   ││VERSIONS ─────────────────────────────────────────────────────────────────────────────────────│
│      Virtual GPUs    ││               AOS 7.6                                                                        │
│      PCIe Devices    ││              Full el9-release-ganges-7.6-stable-050aa562113677c96712dab25f2b4e33479a2f7b     │
│      External Storage││       Hypervisors AHV                                  Software ncc-6.0.0.1 +1               │
│  ▸ Monitoring        ││RESILIENCE ───────────────────────────────────────────────────────────────────────────────────│
│  ▸ Policies          ││                RF 2                                  Current FT Cft 1n or 1d                 │
│  ▸ Admin Center      ││        Desired FT Cft 1n or 1d                           Domain Node                         │
│  ▸ Files             ││        Rack aware ✗                                Backup score 3                            │
│  ▸ Objects           ││NETWORK ──────────────────────────────────────────────────────────────────────────────────────│
│  ▸ Contexts          ││        Virtual IP 198.51.100.86                   Data services 203.0.113.45                 │
│  ▸ Settings          ││   External subnet 203.0.113.1/203.0.113.1          Name servers 198.51.100.146               │
│  ─── by namespace ───││               NTP value-b138bfa2                   Segmentation ✓                            │
│  ▸ aiops             ││CONFIGURATION ────────────────────────────────────────────────────────────────────────────────│
│  ▸ clustermgmt       ││          Timezone Europe/Paris                            Pulse ✓                            │
╰───────────────── ↓15 ╯└──────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k:scroll  g/G:top/bottom  a:actions  Y:yaml  J:json  esc:back
[meter]          ● live
