crates/tui/tests/snapshots/detail__demo_vm.snap
---
source: crates/tui/tests/detail.rs
expression: "app.snapshot(120, 36).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────────────────────────╮
│Context:    -                                                    ⏎ drill        y detail    │       clusters 2  hosts 4
│PC:         127.0.0.1:PORT  pc.7.6                              S sort         w wide      │       vms 12  on/off 10/2
│Cluster:    <all>                                               ←→ columns     ^r refresh   │           alerts ⚠ 3  ✖ 2
│Kind:       Compute & Storage › VMs                             ^t every       ^x stop      │         tasks ▶ 2 running
│Count:      1 of 12                                              a actions     ^c quit      │
╰────────────────────────────────────────────────────────────────────────────────────────────╯           v0.1.0 · pc.7.6
╭ nutsh ───────────────╮┌Virtual Machines · prd-db-01──────────────────────────────────────────────────────────────────┐
│  ▸ Dashboard         ││IDENTITY ─────────────────────────────────────────────────────────────────────────────────────│
│  ▾ Compute & Storage ││              Name prd-db-01                                                                  │
│      Overview        ││              UUID 03000000-0a01-4000-8000-000000000003                                       │
│    • VMs [12]        ││       Description Orders database, primary              Project -                            │
│      ESXi VMs        ││             Owner Operations lead                   Cloned from -                            │
│      Templates       ││        Categories 3                                                                          │
│      Images          ││STATE ────────────────────────────────────────────────────────────────────────────────────────│
│      OVAs            ││             Power ON                                   Agent VM ✗                            │
│      VM Profiles     ││   Live migratable ✓                                   Migrating ✗                            │
│      Guest Customizat││COMPUTE ──────────────────────────────────────────────────────────────────────────────────────│
│      Storage Containe││           Sockets 4                                Cores/socket 2                            │
│      Volume Groups   ││      Threads/core 1                                      Memory 32 GiB                       │
│      Storage Policies││      Machine type PC                                CPU hotplug ✓                            │
│      Categories      ││   CPU passthrough ✗                                Hard pinning ✗                            │
│      Catalog Items   ││        Overcommit ✗                                        vTPM ✓                            │
│  ▸ Network & Security││    Clock timezone UTC                                                                        │
│  ▸ Data Protection   ││UEFI BOOT ────────────────────────────────────────────────────────────────────────────────────│
│  ▸ Hardware          ││        Boot order Disk +2                           Secure boot ✓                            │
│  ▸ Monitoring        ││   NVRAM container prod-db-fast                                                               │
│  ▸ Policies          ││STORAGE ──────────────────────────────────────────────────────────────────────────────────────│
│  ▸ Admin Center      ││             Disks 4                                  Disk sizes 100 GiB +1                   │
│  ▸ Files             ││               Bus SCSI                               Containers prod-db-fast                 │
│  ▸ Objects           ││     Volume groups 0a000000                           From image ubuntu-24-cloud              │
│  ▸ Contexts          ││           CD-ROMs 1                                    ISO type Guest tools                  │
│  ▸ Settings          ││        Flash mode ✓                                                                          │
╰───────────────── ↓18 ╯└──────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k:scroll  g/G:top/bottom  a:actions  w:watch  Y:yaml  J:json  esc:back
[meter]          ● live
