crates/tui/tests/snapshots/detail__host.snap
---
source: crates/tui/tests/detail.rs
expression: "app.snapshot(120, 36).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────────────────────────╮
│Context:    -                                                    ⏎ drill        y detail    │       clusters 3  hosts 7
│PC:         127.0.0.1:PORT  pc.7.6                              S sort         w wide      │     vms 100  on/off 100/0
│Cluster:    <all>                                               ←→ columns     ^r refresh   │       alerts ⚠ 100  ✖ 100
│Kind:       Hardware › Hosts                                    ^t every       ^x stop      │       tasks ▶ 100 running
│Count:      7                                                    a actions     ^c quit      │
╰────────────────────────────────────────────────────────────────────────────────────────────╯           v0.1.0 · pc.7.6
╭ nutsh ───────────────╮┌Hosts · hostName-32bb2634─────────────────────────────────────────────────────────────────────┐
│  ▸ Dashboard         ││IDENTITY ─────────────────────────────────────────────────────────────────────────────────────│
│  ▸ Compute & Storage ││              Name hostName-32bb2634                                                          │
│  ▸ Network & Security││              UUID 0a505ef2-ede4-467c-941f-d39d73bdf1c9                                       │
│  ▸ Data Protection   ││              Type Hyper converged                   Node serial nodeSerial-3659057b          │
│  ▾ Hardware          ││       Block model NX-3060-G6                       Block serial blockSerial-2ad16d9e         │
│      Overview        ││STATE ────────────────────────────────────────────────────────────────────────────────────────│
│      Clusters        ││       Node status NORMAL                            Maintenance NORMAL                       │
│    • Hosts [7]       ││   CVM maintenance ✗                              Acropolis link Connected                    │
│      Disks           ││            Booted 31d                               Secure boot ✗                            │
│      Host NICs       ││HYPERVISOR ───────────────────────────────────────────────────────────────────────────────────│
│      NIC Profiles    ││              Type AHV                                   Version fullName-9e3f9858            │
│      Physical GPUs   ││             State Acropolis normal                          VMs 13                           │
│      Virtual GPUs    ││              User userName-f0c467c5                                                          │
│      PCIe Devices    ││COMPUTE ──────────────────────────────────────────────────────────────────────────────────────│
│      External Storage││         CPU model Intel(R) Xeon(R) Gold 6126 CPU @ 2.60GHz                                   │
│  ▸ Monitoring        ││           Sockets 2                                       Cores 24                           │
│  ▸ Policies          ││           Threads 48                                     Memory 503 GiB                      │
│  ▸ Admin Center      ││       Virtualized ✗                                        GPUs -                            │
│  ▸ Files             ││NETWORK ──────────────────────────────────────────────────────────────────────────────────────│
│  ▸ Objects           ││     Hypervisor IP 203.0.113.15                           CVM IP 198.51.100.164               │
│  ▸ Contexts          ││     CVM backplane 203.0.113.233                         IPMI IP 203.0.113.149                │
│  ▸ Settings          ││         IPMI user username-cd57cc74                                                          │
│  ─── by namespace ───││STORAGE ──────────────────────────────────────────────────────────────────────────────────────│
│  ▸ aiops             ││             Disks 6                                       Sizes 1.6 TiB +2                   │
│  ▸ clustermgmt       ││             Tiers SATA SSD                              Serials serialId-0b44e8d9 +5         │
╰───────────────── ↓15 ╯└──────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k:scroll  g/G:top/bottom  a:actions  w:watch  Y:yaml  J:json  esc:back
[meter]          ● live
