crates/tui/tests/snapshots/detail__protection_policy.snap
---
source: crates/tui/tests/detail.rs
expression: "app.snapshot(120, 36).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────────────────────────╮
│Context:    -                                                    ⏎ drill        y detail    │       clusters 1  hosts 1
│PC:         127.0.0.1:PORT  pc.2024.3                           S sort         w wide      │         vms 3  on/off 3/0
│Cluster:    <all>                                               ←→ columns     ^r refresh   │           alerts ⚠ 2  ✖ 2
│Kind:       Data Protection › Protection Policies               ^t every       ^x stop      │         tasks ▶ 4 running
│Count:      3                                                    a actions     ^c quit      │
╰────────────────────────────────────────────────────────────────────────────────────────────╯  v0.0.2-beta1 · pc.2024.3
╭ nutsh ───────────────╮┌Protection Policies · gold-sync───────────────────────────────────────────────────────────────┐
│  ▸ Dashboard         ││IDENTITY ─────────────────────────────────────────────────────────────────────────────────────│
│  ▸ Compute & Storage ││              Name gold-sync                                                                  │
│  ▸ Network & Security││              UUID b1a2c3d4-0000-4000-8000-000000000501                                       │
│  ▾ Data Protection   ││SCOPE ────────────────────────────────────────────────────────────────────────────────────────│
│      Disaster Recover││        Categories 1                                    Category c0000000                     │
│    • Protection P [3]││REPLICATION ──────────────────────────────────────────────────────────────────────────────────│
│      Recovery Plans  ││              From local                                      To pc-dr                        │
│      Recovery Plan Jo││       Consistency Crash consistent                          RPO 0s                           │
│      Recovery Points ││LOCATIONS ────────────────────────────────────────────────────────────────────────────────────│
│      Recovery Point S││             Label local +1                        Prism Central pc-lab +1                    │
│      VM Recovery Poin││           Primary ✓✗                                                                         │
│      Entity Sync Poli││ACTIONS ──────────────────────────────────────────────────────────────────────────────────────│
│  ▸ Hardware          ││                   delete                                                                     │
│  ▸ Monitoring        ││                   update                                                                     │
│  ▸ Policies          ││                                                                                              │
│  ▸ Admin Center      ││                                                                                              │
│  ▸ Files             ││                                                                                              │
│  ▸ Objects           ││                                                                                              │
│  ▸ Contexts          ││                                                                                              │
│  ▸ Settings          ││                                                                                              │
│  ─── by namespace ───││                                                                                              │
│  ▸ aiops             ││                                                                                              │
│  ▸ clustermgmt       ││                                                                                              │
│  ▸ dataprotection    ││                                                                                              │
│  ▸ iam               ││                                                                                              │
╰───────────────── ↓13 ╯└──────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k:scroll  g/G:top/bottom  a:actions  Y:yaml  J:json  esc:back
[meter]          ● live
