crates/tui/tests/snapshots/detail__subnet.snap
---
source: crates/tui/tests/detail.rs
assertion_line: 74
expression: "app.snapshot(120, 36).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────────────────────────╮
│Context:    -                                                    ⏎ drill        y detail    │       clusters 3  hosts 7
│PC:         127.0.0.1:PORT  pc.7.6                              S sort         w wide      │     vms 100  on/off 100/0
│Cluster:    <all>                                               ←→ columns     ^r refresh   │       alerts ⚠ 100  ✖ 100
│Kind:       Network & Security › Subnets                        ^t every       ^x stop      │       tasks ▶ 100 running
│Count:      21                                                   a actions     ^c quit      │
╰────────────────────────────────────────────────────────────────────────────────────────────╯     v0.0.2-beta2 · pc.7.6
╭ nutsh ───────────────╮┌Subnets · name-b4ae7f66───────────────────────────────────────────────────────────────────────┐
│  ▸ Dashboard         ││IDENTITY ─────────────────────────────────────────────────────────────────────────────────────│
│  ▸ Compute & Storage ││              Name name-b4ae7f66                                                              │
│  ▾ Network & Security││              UUID 8369eaa1-4a18-43a2-acdc-d178ad1d5757                                       │
│      Overview        ││       Description -                                        Type Overlay                      │
│    • Subnets [21]    ││              VLAN -                                  Hypervisor Acropolis                    │
│      VPCs            ││            Bridge -                                                                          │
│      Floating IPs    ││PLACEMENT ────────────────────────────────────────────────────────────────────────────────────│
│      Virtual Switches││           Cluster -                              Virtual switch -                            │
│      Subnet Extension││               VPC name-ec2335cf                                                              │
│      Gateways        ││IPV4 ─────────────────────────────────────────────────────────────────────────────────────────│
│      VPN Connections ││            Subnet 203.0.113.137                          Prefix 24                           │
│      BGP Sessions    ││           Gateway 198.51.100.96                     DHCP server -                            │
│      Routing Policies││        Pool start -                                    Pool end -                            │
│      Traffic Mirrors ││          Reserved -                                                                          │
│      Load Balancer Se││FLAGS ────────────────────────────────────────────────────────────────────────────────────────│
│      Security Policie││          External ✗                                         NAT -                            │
│      Address Groups  ││         Connected -                                    Advanced ✓                            │
│      Service Groups  ││SHARING ──────────────────────────────────────────────────────────────────────────────────────│
│  ▸ Data Protection   ││           Project -                                 Shared with -                            │
│  ▸ Hardware          ││             Owner ownerUserName-59acbb2c           Project name -                            │
│  ▸ Monitoring        ││ACTIONS ──────────────────────────────────────────────────────────────────────────────────────│
│  ▸ Policies          ││                   Update subnet                                                              │
│  ▸ Admin Center      ││                   Share with projects                                                        │
│  ▸ Files             ││                   Unshare                                                                    │
│  ▸ Objects           ││                   Delete subnet                                                              │
╰───────────────── ↓20 ╯└──────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k:scroll  g/G:top/bottom  a:actions  w:watch  Y:yaml  J:json  esc:back
[meter]          ● live
